--- a/LSH.ipynb
+++ b/LSH.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 19,
    "id": "cd81e405",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 20,
    "id": "4e77ada4",
    "metadata": {},
    "outputs": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 21,
    "id": "553a748c",
    "metadata": {},
    "outputs": [],
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 22,
    "id": "8288e484",
    "metadata": {},
    "outputs": [
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 23,
    "id": "e75247c7",
    "metadata": {},
    "outputs": [
@@ -196,89 +196,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 24,
    "id": "85694ee3",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Example MinHash signature for first doc:\n",
-      "[-1735738829 -1832300011 -2118588981 -1818711025 -2098281750 -1614472792\n",
-      " -2084924011 -1984257982 -1372695722 -1559323272 -2089208976 -1960808834\n",
-      " -2027474104 -1615755659 -1690528979 -2087023085 -2048304548 -1995669687\n",
-      " -1772009878 -2041343340 -1541090568 -2012499769 -2102064348 -2114282030\n",
-      " -1659137596 -1589348634 -2130005453 -1825880913 -1994940666 -2073509781\n",
-      " -2066368374 -1925363874 -2029035528 -1883797657 -2067436519 -2110145076\n",
-      " -1839633183 -1980926784 -1958820688 -1907894037 -2082984586 -2077980288\n",
-      " -2141595500 -2082472082 -1219200554 -1805234070 -1855078378 -2055577738\n",
-      " -2081648617 -1919529610]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "def listhash(l, seed):\n",
-    "    val = 0\n",
-    "    for e in l:\n",
-    "        val ^= mmh3.hash(' '.join(e), seed)\n",
-    "    return val\n",
+    "from datasketch import MinHash, MinHashLSH\n",
     "\n",
-    "def minhash_k(shingles, k):\n",
-    "    return [min([listhash(shingle, seed) for shingle in shingles]) for seed in range(1, k+1)]\n",
+    "def create_minhash(text, genre_vec, num_perm=128):\n",
+    "    m = MinHash(num_perm=num_perm)\n",
+    "    for word in set(text.split()):\n",
+    "        m.update(word.encode('utf8'))\n",
+    "    for i, val in enumerate(genre_vec):\n",
+    "        if val == 1:\n",
+    "            m.update(f'genre_{i}'.encode('utf8'))\n",
+    "    return m\n",
     "\n",
-    "k = 50\n",
-    "minhash_signatures = np.array([minhash_k(shingles, k) for shingles in shingle_vector])\n",
-    "print(\"\\nExample MinHash signature for first doc:\")\n",
-    "print(minhash_signatures[0])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "cab796e2",
-   "metadata": {},
-   "source": [
-    "LSH "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "id": "cd1b7bce",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Number of candidate pairs: 190\n"
-     ]
-    }
-   ],
-   "source": [
-    "def lsh_candidates(signatures, bands, rows):\n",
-    "    assert bands * rows == signatures.shape[1], \"bands * rows must equal signature length\"\n",
-    "    candidates = set()\n",
-    "    n = signatures.shape[0]\n",
-    "    \n",
-    "    for b in range(bands):\n",
-    "        buckets = defaultdict(list)\n",
-    "        for i in range(n):\n",
-    "            band_sig = tuple(signatures[i, b*rows:(b+1)*rows])\n",
-    "            buckets[band_sig].append(i)\n",
-    "        for bucket_docs in buckets.values():\n",
-    "            if len(bucket_docs) > 1:\n",
-    "                for i_idx in range(len(bucket_docs)):\n",
-    "                    for j_idx in range(i_idx+1, len(bucket_docs)):\n",
-    "                        candidates.add(tuple(sorted((bucket_docs[i_idx], bucket_docs[j_idx]))))\n",
-    "    return candidates\n",
     "\n",
-    "bands = 10\n",
-    "rows = 5\n",
-    "candidates = lsh_candidates(minhash_signatures, bands, rows)\n",
-    "print(f\"\\nNumber of candidate pairs: {len(candidates)}\")"
+    "minhashes = {}\n",
+    "for idx, row in df.iterrows():\n",
+    "    m = create_minhash(row['description_tfidf'], genre_country_matrix[idx])\n",
+    "    minhashes[idx] = m\n",
+    "\n",
+    "\n",
+    "lsh = MinHashLSH(threshold=0.35, num_perm=128)\n",
+    "for idx, m in minhashes.items():\n",
+    "    lsh.insert(str(idx), m)\n"
    ]
   },
   {
@@ -291,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 25,
    "id": "f6e93139",
    "metadata": {},
    "outputs": [
@@ -300,32 +243,42 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Top 5 similar pairs (threshold=0.35):\n",
+      "Top 5 similar pairs (Jaccard ≥ 0.35):\n",
       "- InuYasha the Movie 4: Fire on the Mystic Island ↔ Inuyasha the Movie - L'isola del fuoco scarlatto | similarity: 1.00\n",
-      "- Seven Souls in the Skull Castle: Season Bird ↔ Seven Souls in the Skull Castle: Season Wind | similarity: 0.96\n",
-      "- Seven Souls in the Skull Castle: Season Bird ↔ Seven Souls in the Skull Castle: Season Flower | similarity: 0.94\n",
-      "- Seven Souls in the Skull Castle: Season Moon Jogen ↔ Seven Souls in the Skull Castle: Season Bird | similarity: 0.94\n",
-      "- Seven Souls in the Skull Castle: Season Moon Jogen ↔ Seven Souls in the Skull Castle: Season Moon Kagen | similarity: 0.94\n"
+      "- Seven Souls in the Skull Castle: Season Bird ↔ Seven Souls in the Skull Castle: Season Wind | similarity: 0.95\n",
+      "- Seven Souls in the Skull Castle: Season Moon Jogen ↔ Seven Souls in the Skull Castle: Season Moon Kagen | similarity: 0.92\n",
+      "- Seven Souls in the Skull Castle: Season Moon Kagen ↔ Seven Souls in the Skull Castle: Season Wind | similarity: 0.91\n",
+      "- Seven Souls in the Skull Castle: Season Moon Jogen ↔ Seven Souls in the Skull Castle: Season Wind | similarity: 0.90\n"
      ]
     }
    ],
    "source": [
-    "#%% Jaccard similarity for candidate pairs\n",
-    "def jaccard_list(doc1_idx, doc2_idx, signatures):\n",
-    "    sig1 = signatures[doc1_idx]\n",
-    "    sig2 = signatures[doc2_idx]\n",
-    "    matches = np.sum(sig1 == sig2)\n",
-    "    return matches / len(sig1)\n",
+    "#%% Compute Jaccard similarity for LSH pairs using datasketch MinHash\n",
     "\n",
-    "threshold = 0.35\n",
+    "def jaccard_datasketch(idx1, idx2):\n",
+    "    m1 = minhashes[idx1]\n",
+    "    m2 = minhashes[idx2]\n",
+    "    return m1.jaccard(m2)\n",
+    "\n",
     "similarities = []\n",
-    "for i, j in candidates:\n",
-    "    sim = jaccard_list(i, j, minhash_signatures)\n",
-    "    if sim >= threshold:\n",
-    "        similarities.append((i, j, sim))\n",
+    "threshold = 0.35\n",
     "\n",
+    "# Get LSH candidates for every item\n",
+    "for i in range(len(df)):\n",
+    "    neighbors = lsh.query(minhashes[i])\n",
+    "    neighbors = [int(n) for n in neighbors if int(n) != i]\n",
+    "\n",
+    "    for j in neighbors:\n",
+    "        # Avoid duplicates (i,j) and (j,i)\n",
+    "        if i < j:\n",
+    "            sim = jaccard_datasketch(i, j)\n",
+    "            if sim >= threshold:\n",
+    "                similarities.append((i, j, sim))\n",
+    "\n",
+    "# Sort by similarity\n",
     "similarities.sort(key=lambda x: x[2], reverse=True)\n",
-    "print(f\"\\nTop 5 similar pairs (threshold={threshold}):\")\n",
+    "\n",
+    "print(f\"\\nTop 5 similar pairs (Jaccard ≥ {threshold}):\")\n",
     "for i, j, sim in similarities[:5]:\n",
     "    print(f\"- {df.loc[i, 'title']} ↔ {df.loc[j, 'title']} | similarity: {sim:.2f}\")"
    ]
@@ -340,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 26,
    "id": "3416551c",
    "metadata": {},
    "outputs": [
@@ -350,9 +303,9 @@
      "text": [
       "\n",
       "Final recommendations for 'Midnight Mass':\n",
-      "- Trial 4 (similarity: 0.41)\n",
-      "- Making a Murderer (similarity: 0.36)\n",
-      "- The Devil Next Door (similarity: 0.35)\n"
+      "- The Dirty Picture (similarity: 0.40)\n",
+      "- Matichya Chuli (similarity: 0.36)\n",
+      "- Thottappan (similarity: 0.35)\n"
      ]
     }
    ],
@@ -403,6 +356,79 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "d7893ed3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Recommendations for: Dick Johnson Is Dead, ['Documentaries', 'United States']\n",
+      " - Command and Control ['Documentaries', 'United States']\n",
+      " - What the Health ['Documentaries', 'United States']\n",
+      " - The Hurt Business ['Documentaries', 'Sports Movies', 'United States']\n",
+      " - 13TH ['Documentaries', 'United States']\n",
+      " - Fire in Paradise ['Documentaries', 'United States']\n",
+      " - Paris Is Burning ['Classic Movies', 'Cult Movies', 'Documentaries', 'United States']\n",
+      " - Quincy ['Documentaries', 'Music & Musicals', 'United States']\n",
+      " - The Last Days ['Documentaries', 'United States']\n",
+      " - Maddman: The Steve Madden Story ['Documentaries', 'United States']\n",
+      " - Let It Fall: Los Angeles 1982-1992 ['Documentaries', 'United States']\n",
+      " - Ariana grande: excuse me, i love you ['Documentaries', 'Music & Musicals', 'United States']\n",
+      " - Take Your Pills ['Documentaries', 'United States']\n",
+      " - De Palma ['Documentaries', 'United States']\n",
+      " - Nature: Raising the Dinosaur Giant ['Documentaries', 'United States']\n",
+      " - The Force ['Documentaries', 'United States']\n",
+      " - Extremis ['Documentaries', 'United States']\n",
+      " - Miss Americana ['Documentaries', 'Music & Musicals', 'United States']\n",
+      " - Iron Cowboy: The Story of the 50.50.50 ['Documentaries', 'Sports Movies', 'United States']\n",
+      " - Vikings Unearthed ['Documentaries', 'United States']\n",
+      " - Ram Dass, Going Home ['Documentaries', 'Faith & Spirituality', 'United States']\n",
+      " - Whose Streets? ['Documentaries', 'United States']\n",
+      " - The Speed Cubers ['Documentaries', 'United States']\n",
+      " - The B-Side: Elsa Dorfman's Portrait Photography ['Documentaries', 'United States']\n",
+      " - Travis Scott: Look Mom I Can Fly ['Documentaries', 'Music & Musicals', 'United States']\n",
+      " - Feminists: What Were They Thinking? ['Documentaries', 'LGBTQ Movies', 'United States']\n",
+      " - Nazi Concentration Camps ['Classic Movies', 'Documentaries', 'United States']\n",
+      " - I'll Sleep When I'm Dead ['Documentaries', 'Music & Musicals', 'United States']\n",
+      " - After Porn Ends ['Documentaries', 'United States']\n",
+      " - Father Soldier Son ['Documentaries', 'United States']\n",
+      " - The Animal People ['Documentaries', 'United States']\n",
+      " - The Redeemed and the Dominant: Fittest on Earth ['Documentaries', 'Sports Movies', 'United States']\n",
+      " - Surviving R. Kelly: The Impact ['Documentaries', 'United States']\n",
+      " - Mucho Mucho Amor: The Legend of Walter Mercado ['Documentaries', 'LGBTQ Movies', 'United States']\n",
+      " - The Remix: Hip Hop X Fashion ['Documentaries', 'Music & Musicals', 'United States']\n",
+      " - Enlighten Us ['Documentaries', 'United States']\n",
+      " - Generation Iron 2 ['Documentaries', 'Sports Movies', 'United States']\n",
+      " - We, the Marines ['Documentaries', 'International Movies', 'United States']\n",
+      " - The C Word ['Documentaries', 'United States']\n",
+      " - Hot Girls Wanted ['Documentaries', 'United States']\n",
+      " - BLACKPINK: Light Up the Sky ['Documentaries', 'Music & Musicals', 'United States']\n",
+      " - In Our Mothers' Gardens ['Documentaries', 'United States']\n",
+      " - The Road to El Camino: Behind the Scenes of El Camino: A Breaking Bad Movie ['Documentaries', 'International Movies', 'United States']\n",
+      " - Calum von Moger: Unbroken ['Documentaries', 'Sports Movies', 'United States']\n",
+      " - LA 92 ['Documentaries', 'United States']\n",
+      " - Seaspiracy ['Documentaries', 'United States']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Change the index below to test a different title\n",
+    "idx_query = 0\n",
+    "\n",
+    "query_minhash = create_minhash(df.loc[idx_query, 'description_clean'], genre_country_matrix[idx_query])\n",
+    "results = lsh.query(query_minhash)\n",
+    "\n",
+    "print(f\"Recommendations for: {df.loc[idx_query, 'title']}, {df.loc[idx_query, 'combined_features']}\")\n",
+    "for i in results:\n",
+    "    i = int(i)\n",
+    "    if i != idx_query:\n",
+    "        print(\" -\", df.loc[i, 'title'],df.loc[i,'combined_features'])\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "82d36b95",
    "metadata": {},
@@ -412,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 28,
    "id": "9a6d4b2f",
    "metadata": {},
    "outputs": [
@@ -434,7 +460,7 @@
        "        0.        ]])"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -451,29 +477,66 @@
    "id": "8fb9ce8e",
    "metadata": {},
    "source": [
-    "Export the recommendation"
+    "Output for a target"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 29,
    "id": "caf0f123",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Target           : \"Midnight Mass\"\n",
+      "Target type      : \"TV Show\"\n",
+      "Target genre(s)  : \"TV Dramas, TV Horror, TV Mysteries\"\n",
+      "\n",
+      "Similar TV Shows:\n",
+      "Name                                          Genres                              Similarity\n",
+      "------------------------------------------------------------------------------------------\n",
+      "\"Goodnight DJ 1\"                              International TV Shows, TV Dramas, TV Horror 0.242\n",
+      "\"Brand New Cherry Flavor\"                     TV Dramas, TV Horror, TV Mysteries  0.240\n",
+      "\"The Originals\"                               TV Dramas, TV Horror, TV Mysteries  0.239\n"
+     ]
+    }
+   ],
    "source": [
-    "#%% Export recommendations\n",
-    "# rec_rows = []\n",
-    "# for movie_idx, recs in recommendations.items():\n",
-    "#     for rec_idx, sim in recs:\n",
-    "#         rec_rows.append({\n",
-    "#             'movie_title': df.loc[movie_idx, 'title'],\n",
-    "#             'recommended_title': df.loc[rec_idx, 'title'],\n",
-    "#             'similarity': sim\n",
-    "#         })\n",
+    "target_index = 5 ## Changing the index changes the target \n",
     "\n",
-    "# recommendations_df = pd.DataFrame(rec_rows)\n",
-    "# recommendations_df.to_csv(\"movie_recommendations.csv\", index=False)\n",
-    "# print(\"\\nSaved top-N movie recommendations to 'movie_recommendations.csv'.\")\n"
+    "target_title = df.loc[target_index, 'title']\n",
+    "target_genres= ', '.join(df.loc[target_index, 'genre_list'])\n",
+    "target_type = df.loc[target_index, 'type'] if 'type' in df.columns else \"Unknown\"\n",
+    "\n",
+    "print(f'\\nTarget           : \"{target_title}\"')\n",
+    "print(f'Target type      : \"{target_type}\"')\n",
+    "print(f'Target genre(s)  : \"{target_genres}\"\\n')\n",
+    "\n",
+    "same_type = []\n",
+    "other_type = []\n",
+    "\n",
+    "for rec_idx, sim in recommendations[target_index]:\n",
+    "    item_type = df.loc[rec_idx, 'type'] if 'type' in df.columns else \"Unknown\"\n",
+    "    entry = (\n",
+    "        df.loc[rec_idx, 'title'],\n",
+    "        \", \".join(df.loc[rec_idx, 'genre_list']),\n",
+    "        sim\n",
+    "    )\n",
+    "    if item_type == target_type:\n",
+    "        same_type.append(entry)\n",
+    "    else:\n",
+    "        other_type.append(entry)\n",
+    "\n",
+    "\n",
+    "print(f'Similar {target_type}s:')\n",
+    "print(\"Name\".ljust(45), \"Genres\".ljust(35), \"Similarity\")\n",
+    "print(\"-\" * 90)\n",
+    "\n",
+    "for title, genres, sim in same_type:\n",
+    "    print(f'\"{title}\"'.ljust(45), f'{genres}'.ljust(35), f\"{sim:.3f}\")"
    ]
   }
  ],
