--- a/Clustering.ipynb
+++ b/Clustering.ipynb
@@ -1,1 +1,59 @@
-
+{
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "id": "65938f05",
+   "metadata": {},
+   "source": [
+    "This is a test, can I push to github now?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "69c1e60d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cluster labels (first few): [ 98  72  48  42  35  70  31 155  13 205]\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# Optional demo on a small subset to avoid O(n^2) blowup\n",
+    "subset = min(400, distance_matrix.shape[0])  # adjust as needed\n",
+    "if subset >= 3: # ensures there are at least 3 objects\n",
+    "    Z = linkage(squareform(distance_matrix[:subset, :subset], checks=False), method='average')\n",
+    "    labels = fcluster(Z, t=0.7, criterion='distance')\n",
+    "    print(\"Cluster labels (first few):\", labels[:10])\n",
+    "else:\n",
+    "    print(\"Not enough items for clustering demo.\")"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": ".venv",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.5"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
+}
