combined lsh and created a stronger recommendation system

--- a/LSHtest.ipynb
+++ b/LSHtest.ipynb
@@ -557,7 +557,7 @@
     "## Finally this is the output\n",
     "## Same as before we define a target and compute the top 10 most similar (this might change depending on how you guys want)\n",
     "## Also computes a cross type so if a Tv series recommends a few movies (this can also change if u guys want)\n",
-    "def print_recommendations_for_index_full(idx, recs=None, top_n=10):\n",
+    "def print_recommendations(idx, recs=None, top_n=10):\n",
     "    if recs is None:\n",
     "        recs = compute_full_similarity(idx, top_k=top_n * 5)\n",
     "\n",
@@ -601,7 +601,7 @@
     "# example usage\n",
     "idx = np.random.randint(0, len(df))\n",
     "recommendations = {idx: compute_full_similarity(idx)}\n",
-    "print_recommendations_for_index_full(idx, recommendations[idx])"
+    "print_recommendations(idx, recommendations[idx])"
    ]
   }
  ],
