--- a/LSH.ipynb
+++ b/LSH.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "id": "01d494f2",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "ec8343fb",
    "metadata": {},
    "outputs": [],
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "d25d3d11",
    "metadata": {},
    "outputs": [],
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "id": "9b4f1444",
    "metadata": {},
    "outputs": [
@@ -337,7 +337,7 @@
        "4  [international tv shows, romantic tv shows, tv...  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "id": "04c1be4b",
    "metadata": {},
    "outputs": [],
@@ -397,7 +397,7 @@
     "##This creates a multi metadata matrix using MLB\n",
     "##And fits a TfIdf vectorizer\n",
     "def build_feature_matrices(df: pd.DataFrame):\n",
-    "    mlb = MultiLabelBinarizer()\n",
+    "    mlb = MultiLabelBinarizer(sparse_output=True)\n",
     "    combined_features_matrix = mlb.fit_transform(df[\"combined_features\"])\n",
     "\n",
     "    vectorizer = TfidfVectorizer(\n",
@@ -427,14 +427,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "id": "3fdd55d3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f215addcf85a4a739b4cc6eae709a5d4",
+       "model_id": "c1875263a0a54de3b5cd373bac6f907f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "id": "e72f4ca0",
    "metadata": {},
    "outputs": [],
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "id": "1b49086e",
    "metadata": {},
    "outputs": [],
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "id": "28c8b920",
    "metadata": {},
    "outputs": [],
@@ -574,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "id": "8efb4167",
    "metadata": {},
    "outputs": [],
@@ -601,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "id": "0437c34e",
    "metadata": {},
    "outputs": [],
@@ -646,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "id": "e084fad9",
    "metadata": {},
    "outputs": [],
@@ -690,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "id": "1a531a79",
    "metadata": {},
    "outputs": [
@@ -699,37 +699,37 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Target           : \"Cobra Kai - The Afterparty\"\n",
-      "Target type      : \"Movie\"\n",
-      "Target genre(s)  : \"movies\"\n",
+      "Target           : \"Real Rob\"\n",
+      "Target type      : \"TV Show\"\n",
+      "Target genre(s)  : \"tv comedies\"\n",
       "\n",
-      "Similar Movies:\n",
+      "Similar TV Shows:\n",
       "Name                                          Genres                                   Similarity\n",
       "----------------------------------------------------------------------------------------------------\n",
-      "\"The Circle - The Afterparty\"                 comedies                                 0.445\n",
-      "\"Ginny & Georgia - The Afterparty\"            comedies, dramas                         0.383\n",
-      "\"Dad Stop Embarrassing Me - The Afterparty\"   comedies                                 0.369\n",
-      "\"Bill Burr: You People Are All the Same\"      stand-up comedy                          0.221\n",
-      "\"Hotel Transylvania 3: Summer Vacation\"       children & family movies, comedies       0.207\n",
-      "\"Jake's Buccaneer Blast\"                      movies                                   0.205\n",
-      "\"Best of Stand-Up 2020\"                       stand-up comedy                          0.193\n",
-      "\"Rangreza\"                                    dramas, international movies, music &... 0.188\n",
-      "\"Bill Burr: Walk Your Way Out\"                stand-up comedy                          0.187\n",
-      "\"The Road to El Camino: Behind the Scene...\"  documentaries, international movies      0.184\n",
+      "\"Norm Macdonald Has a Show\"                   stand-up comedy & talk shows, tv come... 0.403\n",
+      "\"Stand Up and Away! with Brian Regan\"         stand-up comedy & talk shows, tv come... 0.356\n",
+      "\"Conan Without Borders\"                       docuseries, tv comedies                  0.341\n",
+      "\"Chappelle's Show\"                            tv comedies                              0.335\n",
+      "\"Middleditch & Schwartz\"                      tv comedies                              0.333\n",
+      "\"Daniel Sloss: Live Shows\"                    stand-up comedy & talk shows, tv come... 0.330\n",
+      "\"The Upshaws\"                                 tv comedies                              0.324\n",
+      "\"The Joel McHale Show with Joel McHale\"       stand-up comedy & talk shows, tv come... 0.323\n",
+      "\"Kevin Hart: Donât F**k This Up\"            docuseries                               0.323\n",
+      "\"I Think You Should Leave with Tim Robinson\"  tv comedies                              0.321\n",
       "\n",
       "Cross-type suggestions:\n",
       "Name                                          Genres                                   Similarity\n",
       "----------------------------------------------------------------------------------------------------\n",
-      "\"Beyond Stranger Things\"                      stand-up comedy & talk shows, tv myst... 0.196\n",
-      "\"Oggy Oggy\"                                   kids' tv, tv comedies                    0.184\n",
-      "\"W/ Bob & David\"                              tv comedies                              0.182\n",
-      "\"Dinner for Five\"                             stand-up comedy & talk shows             0.180\n",
-      "\"Mystery Science Theater 3000\"                tv comedies, tv sci-fi & fantasy         0.177\n",
-      "\"Dave Chappelle: Equanimity & The Bird R...\"  stand-up comedy & talk shows, tv come... 0.176\n",
-      "\"Jericho\"                                     classic & cult tv, tv action & advent... 0.174\n",
-      "\"PokÃ©mon the Series\"                         anime series, kids' tv                   0.173\n",
-      "\"Monty Python's Personal Best\"                british tv shows, tv comedies            0.172\n",
-      "\"Revelations: The Masters of the Univers...\"  anime series, stand-up comedy & talk ... 0.170\n",
+      "\"Rob Schneider: Asian Momma, Mexican Kids\"    stand-up comedy                          0.459\n",
+      "\"Kevin Hart: I'm a Grown Little Man\"          stand-up comedy                          0.337\n",
+      "\"Dana Carvey: Straight White Male, 60\"        stand-up comedy                          0.294\n",
+      "\"Jerry Seinfeld: I'm Telling You for the...\"  stand-up comedy                          0.287\n",
+      "\"Bill Burr: You People Are All the Same\"      stand-up comedy                          0.287\n",
+      "\"Jo Koy: Comin' In Hot\"                       stand-up comedy                          0.283\n",
+      "\"Anjelah Johnson: Not Fancy\"                  stand-up comedy                          0.280\n",
+      "\"Sam Jay: 3 In The Morning\"                   stand-up comedy                          0.280\n",
+      "\"Mortified Nation\"                            documentaries                            0.278\n",
+      "\"Louis C.K.: Hilarious\"                       movies                                   0.278\n",
       "\n"
      ]
     }
